Adicionado Dicionário HTML

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <a href="#linguagens">Linguagens em Estudo</a>
                 <a href="#projetos">Projetos</a>
                 <a href="#redes">Redes</a>
+                <li><a href="html_dict.html">Dicionário HTML</a></li>
             </menu>
         </nav>
     </header>
